Update Pathway to build with nuGet dependencies

--- a/DistFiles/DistFiles.csproj
+++ b/DistFiles/DistFiles.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="12.0">
   <UsingTask TaskName="MSBuild.ExtensionPack.UI.Dialog" AssemblyFile="..\packages\MSBuild.Extension.Pack.1.9.0\tools\net40\MSBuild.ExtensionPack.dll" />
   <!-- Extension pack from http://msbuildextensionpack.codeplex.com/ -->
@@ -400,7 +400,7 @@
     <BteTransform Include="*.xslt" />
     <XeTexExe Include="..\XeTex\xetexExe\**\*.*" />
     <UsfmConvert Include="..\lib\ParatextShared.dll;..\..\lib\NetLoc.dll" />
-    <WritingSystemDependency Include="..\lib\Spart.dll" />
+    <WritingSystemDependency Include="..\src\BuildStep\bin\Debug\Spart.dll" />
   </ItemGroup>
   <Target Name="XeLaTexBeforeBuild">
     <Message Text="User entered BuildNumber: $(BUILD_NUMBER)" Importance="high" />
