--- a/src/Html5Convert/Html5Convert.csproj
+++ b/src/Html5Convert/Html5Convert.csproj
@@ -235,6 +235,9 @@
   <ItemGroup>
     <EmbeddedResource Include="toc2html5.xsl" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
