--- a/src/PsTool/packages.config
+++ b/src/PsTool/packages.config
@@ -1,7 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Analytics" version="2.0.3" targetFramework="net40" />
+  <package id="icu.net" version="2.7.1" targetFramework="net40" />
+  <package id="Icu4c.Win.Full.Lib" version="59.1.15" targetFramework="net461" />
   <package id="ini-parser" version="2.5.2" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net40" />
+  <package id="L10NSharp" version="4.1.0" targetFramework="net461" />
+  <package id="Microsoft.DotNet.PlatformAbstractions" version="2.0.4" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyModel" version="2.0.4" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net40" />
+  <package id="SIL.Core" version="8.0.0" targetFramework="net461" />
+  <package id="SIL.WritingSystems" version="8.0.0" targetFramework="net461" />
+  <package id="Spart" version="1.0.0" targetFramework="net461" />
+  <package id="System.IO.FileSystem.AccessControl" version="4.7.0" targetFramework="net461" />
+  <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net461" />
+  <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net40" />
 </packages>
