--- a/src/SwordConvert/SwordConvert.csproj
+++ b/src/SwordConvert/SwordConvert.csproj
@@ -270,6 +270,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
