--- a/src/theWordConvert/packages.config
+++ b/src/theWordConvert/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="dotConnect.Express.for.SQLite" version="5.8.862" targetFramework="net461" />
+  <package id="L10NSharp" version="4.1.0" targetFramework="net461" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net461" />
 </packages>
