--- a/src/Bootstrap/res/PathwayBootstrap.ini
+++ b/src/Bootstrap/res/PathwayBootstrap.ini
@@ -15,11 +15,11 @@
 ;along with this program.  If not, see <http://www.gnu.org/licenses/>.
 ;
 [Versions]
-Java=8u172
+Java=8u281
 ;LibreOffice=3.6.5,7A3D261E340E433074424681EDB8668C
-LibreOffice=5.4.6
-Prince=11.3.2-win32
-PdfXChange=PDFX5SA_LE_H.zip,76a6d0fe9e1042aaf3a37476283d5a30
-FoxitReader=715.0425
-Calibre=3.23.0
+LibreOffice=7.0.5
+Prince=14.1-win32
+;PdfXChange=PDFX5SA_LE_H.zip,76a6d0fe9e1042aaf3a37476283d5a30
+;FoxitReader=715.0425
+Calibre=5.14.0
 XeLaTex=1.15.4
