move prince dependency to CssDialog

--- a/src/CssDialog/CssDialog.csproj
+++ b/src/CssDialog/CssDialog.csproj
@@ -256,6 +256,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\Newtonsoft.Json.7.0.1\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="Prince, Version=2.0.0.0, Culture=neutral, PublicKeyToken=5a53b4f484d34322, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\Prince.dll</HintPath>
+    </Reference>
     <Reference Include="SIL.Core, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\SIL.Core.dll</HintPath>
