--- a/src/PdfConvert/PdfConvert.csproj
+++ b/src/PdfConvert/PdfConvert.csproj
@@ -230,6 +230,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\Prince.dll</HintPath>
     </Reference>
+    <Reference Include="PrinceXML.Wrapper, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\PrinceXMLWrapper.1.1.0\lib\netstandard2.0\PrinceXML.Wrapper.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -252,6 +255,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
