--- a/src/CssDialog/packages.config
+++ b/src/CssDialog/packages.config
@@ -7,6 +7,7 @@
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="7.0.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.2" targetFramework="net48" />
   <package id="PrinceXML" version="11.0.0" targetFramework="net40" />
+  <package id="PrinceXMLWrapper" version="1.1.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.IO" version="4.3.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
