--- a/src/BuildStep/BuildStep.csproj
+++ b/src/BuildStep/BuildStep.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -247,5 +247,6 @@
   </Target> -->
   <Target Name="AfterBuild">
     <Copy SourceFiles="$(OutDir)$(TargetFileName)" DestinationFolder="$(SolutionDir)" />
+    <Message Text="Copying $(OutDir)$(TargetFileName) to $(SolutionDir)" />
   </Target>
 </Project>
